@@ -1,6 +1,6 @@
 package net.geant.nmaas.portal.api.auth;
 
-import net.geant.nmaas.portal.domain.DomainBase;
+import net.geant.nmaas.api.dto.domains.DomainBaseDto;
 import net.geant.nmaas.portal.api.exceptions.MissingElementException;
 import net.geant.nmaas.portal.api.exceptions.SignupException;
 import net.geant.nmaas.portal.persistence.entity.Domain;
@@ -27,24 +27,24 @@ import static org.mockito.Mockito.when;
 
 class RegistrationControllerTest {
 
-    private UserService userService = mock(UserService.class);
+    private static final Domain GLOBAL_DOMAIN = new Domain(1L, "global", "global", true);
 
-    private DomainService domainService = mock(DomainService.class);
+    private static final Domain DOMAIN = new Domain(2L, "testdom", "testdom", true);
 
-    private ModelMapper modelMapper = new ModelMapper();
+    private final UserService userService = mock(UserService.class);
 
-    private ApplicationEventPublisher eventPublisher = mock(ApplicationEventPublisher.class);
+    private final DomainService domainService = mock(DomainService.class);
+
+    private final ModelMapper modelMapper = new ModelMapper();
+
+    private final ApplicationEventPublisher eventPublisher = mock(ApplicationEventPublisher.class);
 
     private RegistrationController registrationController;
 
     private Registration registration;
 
-    private static final Domain GLOBAL_DOMAIN = new Domain(1L,"global", "global", true);
-
-    private static final Domain DOMAIN = new Domain(2L,"testdom", "testdom", true);
-
     @BeforeEach
-    void setup(){
+    void setup() {
         registration = this.createRegistration();
         registrationController = new RegistrationController(userService, domainService, modelMapper, eventPublisher);
         when(domainService.getGlobalDomain()).thenReturn(Optional.of(GLOBAL_DOMAIN));
@@ -54,14 +54,14 @@ class RegistrationControllerTest {
     }
 
     @Test
-    void shouldSignupWithoutAnyDomainSelected(){
+    void shouldSignupWithoutAnyDomainSelected() {
         this.registrationController.signup(registration, "token");
         verify(userService, times(1)).register(any(), any(), any());
         verify(eventPublisher, times(1)).publishEvent(any());
     }
 
     @Test
-    void shouldSignupWithSelectedDomain(){
+    void shouldSignupWithSelectedDomain() {
         registration.setDomainId(DOMAIN.getId());
         this.registrationController.signup(registration, "token");
         verify(userService, times(1)).register(any(), any(), any());
@@ -70,14 +70,14 @@ class RegistrationControllerTest {
     }
 
     @Test
-    void shouldNotSignupWhenRegistrationIsNull(){
+    void shouldNotSignupWhenRegistrationIsNull() {
         assertThrows(SignupException.class, () -> {
             registrationController.signup(null, "token");
         });
     }
 
     @Test
-    void shouldNotSignupWhenUserHasEmptyUsername(){
+    void shouldNotSignupWhenUserHasEmptyUsername() {
         assertThrows(SignupException.class, () -> {
             registration.setUsername("");
             registrationController.signup(registration, "token");
@@ -85,7 +85,7 @@ class RegistrationControllerTest {
     }
 
     @Test
-    void shouldNotSignupWhenUserHasEmptyPassword(){
+    void shouldNotSignupWhenUserHasEmptyPassword() {
         assertThrows(SignupException.class, () -> {
             registration.setPassword(null);
             registrationController.signup(registration, "token");
@@ -93,7 +93,7 @@ class RegistrationControllerTest {
     }
 
     @Test
-    void shouldNotSignupWhenUserHasEmptyMail(){
+    void shouldNotSignupWhenUserHasEmptyMail() {
         assertThrows(SignupException.class, () -> {
             registration.setEmail(null);
             registrationController.signup(registration, "token");
@@ -101,7 +101,7 @@ class RegistrationControllerTest {
     }
 
     @Test
-    void shouldNotSignupWhenUserNotAcceptTermsOfUse(){
+    void shouldNotSignupWhenUserNotAcceptTermsOfUse() {
         assertThrows(SignupException.class, () -> {
             registration.setTermsOfUseAccepted(false);
             registrationController.signup(registration, "token");
@@ -109,7 +109,7 @@ class RegistrationControllerTest {
     }
 
     @Test
-    void shouldNotSignupWhenUserNotAcceptPrivacyPolicy(){
+    void shouldNotSignupWhenUserNotAcceptPrivacyPolicy() {
         assertThrows(SignupException.class, () -> {
             registration.setPrivacyPolicyAccepted(false);
             registrationController.signup(registration, "token");
@@ -117,7 +117,7 @@ class RegistrationControllerTest {
     }
 
     @Test
-    void shouldNotSignupWithWrongDomainId(){
+    void shouldNotSignupWithWrongDomainId() {
         assertThrows(SignupException.class, () -> {
             registration.setDomainId(9L);
             when(domainService.findDomain(registration.getDomainId())).thenReturn(Optional.empty());
@@ -126,7 +126,7 @@ class RegistrationControllerTest {
     }
 
     @Test
-    void shouldNotSignupWithoutGlobalDomain(){
+    void shouldNotSignupWithoutGlobalDomain() {
         assertThrows(MissingElementException.class, () -> {
             when(domainService.getGlobalDomain()).thenReturn(Optional.empty());
             registrationController.signup(registration, "token");
@@ -134,14 +134,14 @@ class RegistrationControllerTest {
     }
 
     @Test
-    void shouldGetDomains(){
-        List<DomainBase> result = registrationController.getDomains();
+    void shouldGetDomains() {
+        List<DomainBaseDto> result = registrationController.getDomains();
         assertEquals(1, result.size());
-        assertEquals(DOMAIN.getCodename(), result.get(0).getCodename());
+        assertEquals(DOMAIN.getCodename(), result.getFirst().getCodename());
     }
 
     @Test
-    void shouldNotGetDomainsWhenGlobalIsMissing(){
+    void shouldNotGetDomainsWhenGlobalIsMissing() {
         assertThrows(MissingElementException.class, () -> {
             when(domainService.getGlobalDomain()).thenReturn(Optional.empty());
             when(domainService.getDomains()).thenReturn(Collections.singletonList(DOMAIN));
@@ -149,7 +149,7 @@ class RegistrationControllerTest {
         });
     }
 
-    private Registration createRegistration(){
+    private Registration createRegistration() {
         Registration registration = new Registration("test");
         registration.setPassword("secret");
         registration.setEmail("test@test.com");
